[gd_scene load_steps=2 format=3 uid="uid://bjeq44behc66"]

[ext_resource type="Script" uid="uid://ctlndkfruiikc" path="res://nodes/Condition Node.gd" id="1_hg0c1"]

[node name="conditionNode" type="GraphNode"]
offset_right = 300.0
offset_bottom = 230.0
resizable = true
title = "Condition Node"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(0.647059, 0.937255, 0.67451, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(0.647059, 0.937255, 0.67451, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 0.364706, 0.364706, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = false
slot/5/left_type = 0
slot/5/left_color = Color(1, 1, 1, 1)
slot/5/left_icon = null
slot/5/right_enabled = true
slot/5/right_type = 0
slot/5/right_color = Color(0.647059, 0.937255, 0.67451, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = true
slot/6/right_type = 0
slot/6/right_color = Color(1, 0.364706, 0.364706, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
script = ExtResource("1_hg0c1")

[node name="InputCheckBoxes" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="Input1" type="CheckBox" parent="InputCheckBoxes"]
layout_mode = 2
text = "Toggle 1 input"

[node name="Input2" type="CheckBox" parent="InputCheckBoxes"]
layout_mode = 2
text = "Toggle 2 input"

[node name="Value1" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Value 1"
alignment = 1

[node name="Operator" type="OptionButton" parent="."]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_horizontal = 4
selected = 0
item_count = 6
popup/item_0/text = "=="
popup/item_0/id = 0
popup/item_1/text = "!="
popup/item_1/id = 1
popup/item_2/text = ">"
popup/item_2/id = 2
popup/item_3/text = "<"
popup/item_3/id = 3
popup/item_4/text = ">="
popup/item_4/id = 4
popup/item_5/text = "<="
popup/item_5/id = 5

[node name="Value2" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Value 2"
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TrueLabel" type="ItemList" parent="."]
layout_mode = 2
mouse_filter = 2
auto_height = true
item_count = 1
item_0/text = "True"

[node name="FalseLabel" type="ItemList" parent="."]
layout_mode = 2
mouse_filter = 2
auto_height = true
item_count = 1
item_0/text = "False"

[connection signal="toggled" from="InputCheckBoxes/Input1" to="." method="_on_input_1_toggled"]
[connection signal="toggled" from="InputCheckBoxes/Input2" to="." method="_on_input_2_toggled"]
